Add Media Query polyfill

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="modernizr-2.0.6.js"></script>
     <script src="matchMedia.js"></script>
     <script src="MobileFirster.js"></script>
+    <script>Modernizr.mq('(min-width:0)') || document.write('<script src="respond.min.js"><\/script>')</script>
 
     <link rel="stylesheet" id="mainCSS" href="css/phone.css">
     <script type="text/javascript">
