Update index.html for mobile viewport

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
+<!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
+
+    <title>Mobile Firster</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Mobile viewport optimization http://goo.gl/z0PA8 -->
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <script src="modernizr-2.0.6.js"></script>
     <script src="matchMedia.js"></script>
     <script src="MobileFirster.js"></script>
